--- a/Web App/templates/base.html
+++ b/Web App/templates/base.html
@@ -6,6 +6,7 @@
     <title>Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
 
   <body>
